--- a/app/src/main/res/layout/activity_bill_generation.xml
+++ b/app/src/main/res/layout/activity_bill_generation.xml
@@ -93,6 +93,7 @@
                     android:textSize="16dp" />
 
                 <EditText
+                    android:enabled="false"
                     android:id="@+id/rateValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
