--- a/app/src/main/res/layout/activity_add_vehicle.xml
+++ b/app/src/main/res/layout/activity_add_vehicle.xml
@@ -589,6 +589,7 @@
                 android:layout_marginTop="30dp"
                 android:maxLength="6"
                 android:maxLines="1"
+                android:background="@color/btn_login"
                 android:text="Submit" />
         </LinearLayout>
 
