--- a/app/src/main/res/layout/activity_bill_generation.xml
+++ b/app/src/main/res/layout/activity_bill_generation.xml
@@ -151,6 +151,7 @@
                 android:textSize="18dp" />
 
             <Button
+                android:background="@color/btn_login"
                 android:id="@+id/btnPayFinal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
