--- a/app/src/main/res/layout/activity_search_vehicle.xml
+++ b/app/src/main/res/layout/activity_search_vehicle.xml
@@ -97,6 +97,7 @@
     </LinearLayout>
 
     <Button
+        android:background="@color/btn_login"
         android:id="@+id/searchBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
