--- a/app/src/main/res/layout/activity_book_vehicle.xml
+++ b/app/src/main/res/layout/activity_book_vehicle.xml
@@ -84,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="Contact Number"
+                android:maxLength="10"
                 android:inputType="number"
                 android:maxLines="1" />
 
@@ -126,6 +127,7 @@
             </LinearLayout>
 
             <Button
+                android:background="@color/btn_login"
                 android:id="@+id/btnProceed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
