--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="72dp"
         android:layout_gravity="center"
         android:layout_margin="20dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/vrs" />
 
     <TextView
         android:layout_width="wrap_content"
