--- a/app/src/main/res/layout/activity_vehicle_details.xml
+++ b/app/src/main/res/layout/activity_vehicle_details.xml
@@ -272,6 +272,7 @@
             </android.support.v7.widget.CardView>
 
             <Button
+                android:background="@color/colorAccent"
                 android:id="@+id/btnPay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
