--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -138,6 +138,7 @@
             android:padding="5dp" />
     </RelativeLayout>
     <Button
+        android:background="@color/bg_login"
         android:id="@+id/paymentBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
