--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#258e77</color>
-    <color name="colorPrimaryDark">#258e77</color>
-    <color name="colorAccent">#258e77</color>
+    <color name="colorPrimary">#FFC400</color>
+    <color name="colorPrimaryDark">#FFC400</color>
+    <color name="colorAccent">#FFC400</color>
     <color name="colorLine">#8597f9</color>
 
-    <color name="bg_login">#258e77</color>
+    <color name="bg_login">#FFC400</color>
     <color name="bg_register">#2e3237</color>
     <color name="bg_main">#428bca</color>
     <color name="white">#ffffff</color>
@@ -14,7 +14,7 @@
     <color name="input_register">#888888</color>
     <color name="input_register_bg">#3b4148</color>
     <color name="input_register_hint">#5e6266</color>
-    <color name="btn_login">#258e77</color>
+    <color name="btn_login">#FFC400</color>
     <color name="btn_login_bg">#eceef1</color>
     <color name="lbl_name">#333333</color>
     <color name="btn_logut_bg">#ff6861</color>
