--- a/app/src/main/res/layout/vehicle_list_layout.xml
+++ b/app/src/main/res/layout/vehicle_list_layout.xml
@@ -11,6 +11,24 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_view_location"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="15dp">
+
+            <TextView
+                android:id="@+id/locationTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="Current Location" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_below="@+id/card_view_location"
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -46,11 +64,11 @@
         app:mk_type="ClassicSpinner" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/add_veh" />
+        app:srcCompat="@drawable/location" />
 
 </android.support.design.widget.CoordinatorLayout>
