--- a/app/src/main/res/menu/edit_menu.xml
+++ b/app/src/main/res/menu/edit_menu.xml
@@ -6,4 +6,11 @@
         android:orderInCategory="100"
         android:title="Edit"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="100"
+        android:title="Delete"
+        app:showAsAction="never" />
+
 </menu>
