--- a/app/src/main/res/layout/vehicle_list_layout.xml
+++ b/app/src/main/res/layout/vehicle_list_layout.xml
@@ -23,7 +23,8 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Current Location" />
+                android:drawableLeft="@drawable/location_marker"
+                android:text="Please click on location for near by vehicles" />
 
         </android.support.v7.widget.CardView>
 
@@ -62,7 +63,15 @@
         android:layout_gravity="center"
         app:mk_color="@color/colorPrimary"
         app:mk_type="ClassicSpinner" />
-
+<TextView
+    android:id="@+id/errorTV"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:textSize="20dp"
+    android:visibility="gone"
+    android:text="No Vehicle available nearby!"/>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabLocation"
         android:layout_width="wrap_content"
