--- a/app/src/main/res/layout/vehicle_list_layout.xml
+++ b/app/src/main/res/layout/vehicle_list_layout.xml
@@ -21,28 +21,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:drawableLeft="@drawable/location_marker"
                 android:gravity="center"
                 android:padding="10dp"
-                android:drawableLeft="@drawable/location_marker"
                 android:text="Please click on location for near by vehicles" />
 
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:layout_below="@+id/card_view_location"
             android:id="@+id/card_view"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_margin="15dp">
+            android:layout_below="@+id/card_view_location"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="15dp">
 
             <TextView
                 android:id="@+id/searchTV"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:drawableLeft="@drawable/search_icon"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Search your ride" />
+                android:text="  Search your ride" />
 
         </android.support.v7.widget.CardView>
 
@@ -63,15 +65,17 @@
         android:layout_gravity="center"
         app:mk_color="@color/colorPrimary"
         app:mk_type="ClassicSpinner" />
-<TextView
-    android:id="@+id/errorTV"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:textSize="20dp"
-    android:visibility="gone"
-    android:text="No Vehicle available nearby!"/>
+
+    <TextView
+        android:id="@+id/errorTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="No vehicle found! Press home to reload \n Or perform search"
+        android:textSize="20dp"
+        android:visibility="gone" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabLocation"
         android:layout_width="wrap_content"
