--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -92,6 +92,16 @@
                         android:text="Available" />
                 </LinearLayout>
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/sendFeedBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:text="Feedback"
+                android:textColor="#007dab"
+                android:visibility="gone" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
