--- a/app/src/main/res/layout/vehicle_list_layout.xml
+++ b/app/src/main/res/layout/vehicle_list_layout.xml
@@ -13,7 +13,7 @@
         <android.support.v7.widget.CardView
             android:id="@+id/card_view_location"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_margin="15dp">
 
             <TextView
@@ -23,6 +23,7 @@
                 android:layout_gravity="center"
                 android:drawableLeft="@drawable/location_marker"
                 android:gravity="center"
+                android:maxLines="3"
                 android:padding="10dp"
                 android:text="Please click on location for near by vehicles" />
 
