--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,12 +23,12 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/help"
-            android:title="Help" />
+            android:title="Contact Us" />
 
         <item
             android:id="@+id/nav_setting"
-            android:icon="@drawable/setting"
-            android:title="Settings" />
+            android:icon="@drawable/about"
+            android:title="About" />
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/logout"
